--- a/partsAvailability/webapp/index.html
+++ b/partsAvailability/webapp/index.html
@@ -6,11 +6,9 @@
 		<meta charset="UTF-8">
 
 		<title>partsAvailability</title>
-					<!--src="{{{sapui5liburl}}}/resources/sap-ui-core.js"-->
-	
+
 		<script id="sap-ui-bootstrap"
-	
-	src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/1.63.1/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize_plus"
 			data-sap-ui-compatVersion="edge"
