--- a/partsAvailability/webapp/index.html
+++ b/partsAvailability/webapp/index.html
@@ -8,7 +8,7 @@
 		<title>Parts Availability</title>
 <!--DMND0003799 version update-->
 		<script id="sap-ui-bootstrap"
-			src="https://sapui5.hana.ondemand.com/1.71/resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/1.71/resources/sap-ui-cachebuster/sap-ui-core.js"
 			data-sap-ui-async="true"
 			data-sap-ui-libs="sap.m,sap.ui.layout,sap.ui.unified"
 			data-sap-ui-theme="sap_belize_plus"
@@ -21,7 +21,7 @@
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<!--	<script>
+		<script>
 			sap.ui.getCore().attachInit(function() {
 				new sap.m.Shell({
 					app: new sap.ui.core.ComponentContainer({
@@ -31,7 +31,7 @@
 					appWidthLimited : false
 				}).placeAt("content");
 			});
-		</script>-->
+		</script>
 	</head>
 
 	<body class="sapUiBody" id="content">
