--- a/partsAvailability/webapp/index.html
+++ b/partsAvailability/webapp/index.html
@@ -21,7 +21,7 @@
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
-		<script>
+	<!--	<script>
 			sap.ui.getCore().attachInit(function() {
 				new sap.m.Shell({
 					app: new sap.ui.core.ComponentContainer({
@@ -31,7 +31,7 @@
 					appWidthLimited : false
 				}).placeAt("content");
 			});
-		</script>
+		</script>-->
 	</head>
 
 	<body class="sapUiBody" id="content">
