--- a/partsAvailability/webapp/index.html
+++ b/partsAvailability/webapp/index.html
@@ -36,10 +36,10 @@
 
 	<body class="sapUiBody" id="content">
 		<div data-sap-ui-component
-		data-name="com.sap.build.toyota-canada.partsAvailability"
+		data-name="partsAvailability"
 		data-height="100%"
 		data-id="container"
-		data-settings='{"id" : "com.sap.build.toyota-canada.partsAvailability"}'
+		data-settings='{"id" : "partsAvailability"}'
 		style="height: 100%">
 	</div>
 	</body>
