--- a/partsAvailability/webapp/index.html
+++ b/partsAvailability/webapp/index.html
@@ -8,7 +8,7 @@
 		<title>Parts Availability</title>
 <!--DMND0003799 version update-->
 		<script id="sap-ui-bootstrap"
-			src=https://sapui5.hana.ondemand.com/1.63.1/resources/sap-ui-core.js
+			src=https://sapui5.hana.ondemand.com/1.63.1/resources/sap-ui-cachebuster/sap-ui-core.js
 			data-sap-ui-libs="sap.m,sap.ui.layout,sap.ui.unified"
 			data-sap-ui-theme="sap_belize_plus"
 			data-sap-ui-compatVersion="edge"
