--- a/partsAvailability/webapp/index.html
+++ b/partsAvailability/webapp/index.html
@@ -8,7 +8,7 @@
 		<title>Parts Availability</title>
 <!--DMND0003799 version update-->
 		<script id="sap-ui-bootstrap"
-			src=https://sapui5.hana.ondemand.com/1.71/resources/sap-ui-core.js
+			src="https://sapui5.hana.ondemand.com/1.71/resources/sap-ui-core.js"
 			data-sap-ui-async="true"
 			data-sap-ui-libs="sap.m,sap.ui.layout,sap.ui.unified"
 			data-sap-ui-theme="sap_belize_plus"
@@ -19,7 +19,7 @@
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport">
 		</script>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-<!--	<script>
+		<!--	<script>
 			sap.ui.getCore().attachInit(function() {
 				new sap.m.Shell({
 					app: new sap.ui.core.ComponentContainer({
@@ -40,7 +40,6 @@
 		data-settings='{"id" : "partsAvailability"}'
 		style="height: 100%">
 	</div>
-		
 	</body>
 
 </html>
