--- a/partsAvailability/webapp/index.html
+++ b/partsAvailability/webapp/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 
 		<title>Parts Availability</title>
-<!--DMND0003799 version update-->
+<!--Comment DMND0003799 version update-->
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/1.71.50/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m,sap.ui.layout,sap.ui.unified"
